# htop

./: Cargo.toml  Jenkinsfile  README.md  docker-compose.yml
common/protos/: api.proto
frontend/: .eslintrc.json  .gitignore  dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.scss  index.tsx  vite-env.d.ts
frontend/src/common/: AnimatedLink.tsx  types.ts  utils.ts
frontend/src/components/: CPU.tsx  CPUUsage.tsx  Header.tsx  RAMUsage.tsx
frontend/src/contexts/: WebsocketContext.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/proto/: api.ts  api_pb.js
frontend/src/utils/: env.ts  fetchApi.ts
server/: Cargo.toml  build.rs  dockerfile
server/src/: main.rs  types.rs
server/src/proto_gen/: api.rs
src/: main.rs
