[package]
name = "htop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version ="0.8.8", features = ["macros"]}
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.37.2"
tokio = {version= "1.48.0", features = ["rt-multi-thread"] }
tower-http = {version = "0.5.2", features = ["cors"]}
